# libGemini

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: compiler_flags.cmake  forestclaw.cmake  gemini3d.cmake  libraries.cmake  libraries.json  options.cmake
cmake/test/: compare.cmake  config.cmake  download.cmake  ref_data.json  sim.cmake
src/: CMakeLists.txt  gemini_main.c  gemini_main.cpp  pathlib.cpp  pathlib.hpp  test_pathlib.cpp
